--- a/src/features/gag/components/gags-picker/index.module.css
+++ b/src/features/gag/components/gags-picker/index.module.css
@@ -1,8 +1,3 @@
-.gagsPicker .custom-scrollbar {
-  --bar-width: 0.5rem;
-  --thumb-color: var(--blue-500);
-  --thumb-hover-color: var(--blue-400);
-}
 .gagsPicker ::-webkit-scrollbar {
   background: 0;
 }
@@ -42,6 +37,7 @@
   padding-right: 0;
   width: 100%;
 }
+.desktop .gagsPickerWrap { padding: 1rem; }
 
 
 .headingBtnWrap {
@@ -93,6 +89,7 @@
 
 
 .pickerWrap {
+  --bar-width: 0.5rem;
   --thumb-color: var(--blue-500);
   --thumb-hover-color: var(--blue-400);
   grid-column: 1 / 4;
